ECA-8717: bring command files up to par with run.sh to work with java 11 without endorsed dir
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@33920 37aeb1de-b14b-0410-9a0e-82b28170d228